--- a/css/cpt_m_style.css
+++ b/css/cpt_m_style.css
@@ -789,6 +789,7 @@
 }
 .news_article_list_item .news_article_banquan dl dt{
     float: left;
+    display:inline-block;
 }
 .news_article_list_item .news_article_banquan dl dd{
     margin-left: 1.5rem;
@@ -796,7 +797,7 @@
 
 }
 .news_article_list_item .news_article_banquan dl .huanhang{
-   
+   word-wrap:break-word
 }
 .news_article_list_item .news_article_link{
     font: normal .30rem/.5rem "Microsoft Yahei";
