--- a/css/cpt_m_style.css
+++ b/css/cpt_m_style.css
@@ -792,11 +792,11 @@
 .news_article_list_item .news_article_banquan dl dt{
     float: left;
     display:inline-block;
+     width:1.5rem;
 }
 .news_article_list_item .news_article_banquan dl dd{
     margin-left: 1.5rem;
-   
-
+    width:6rem;
 }
 .news_article_list_item .news_article_banquan dl .huanhang{
    word-wrap:break-word
